# anam

./: .gitignore  CHANGELOG.md  Cargo.toml  DEMO-alpha.md  DEMO-beta.md  DEMO.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SPECS-1.0.md  SPECS-beta.md  SPECS.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml  docker.yml
crates/anam-cli/: Cargo.toml
crates/anam-cli/src/: main.rs
crates/anamdb/: Cargo.toml
crates/anamdb/benches/: reasoning.rs
crates/anamdb/src/: bench_quick.rs  lib.rs
crates/anamdb/src/client/: mod.rs
crates/anamdb/src/core/: bcnf_catalog.rs  error.rs  mod.rs  provenance.rs  schema.rs  session.rs
crates/anamdb/src/execution/: concurrency.rs  dispatcher.rs  distributed_optimizer.rs  fao_udf.rs  logic_filter.rs  logic_optimizer_rule.rs  mod.rs  neural_scan.rs  optimizer.rs  pipeline.rs  predict_exec.rs  provenance_exec.rs  task_router.rs
crates/anamdb/src/hitl/: explainer.rs  global_lineage.rs  mod.rs  monitor.rs  self_repair.rs  triage.rs
crates/anamdb/src/logic/: canonical.rs  datalog_checker.rs  datalog_repair.rs  engine.rs  mod.rs  nl_compiler.rs
crates/anamdb/src/model/: ai_tables.rs  distillation.rs  fao.rs  finetune.rs  kge.rs  mod.rs  onnx_adapter.rs  registry.rs
crates/anamdb/src/sdk/: hub.rs  logic_pack.rs  mod.rs  python.rs
crates/anamdb/src/sdk/logic_packs/: clinical_safety.json
crates/anamdb/src/server/: auth.rs  metering.rs  mod.rs  rate_limit.rs
crates/anamdb/src/storage/: catalog.rs  ingestion.rs  lance_provider.rs  mod.rs  spatial_audio.rs  streaming_provider.rs  write_path.rs
crates/anamdb/tests/: datalog_filter.rs  engine_integration.rs  fao_udf.rs  server_sdk.rs
demo/: generate_large_dataset.py  generate_model.py  run_demo.sh
demo/data/: transactions.csv
demo/packs/: financial_compliance.json
docs/: demo.cast  index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/cli/: getting-started.md  repl.md
docs/cli/commands/: init.md  serve.md  start.md  status.md
docs/cli/repl/: devices.md  explain.md  hub.md  load-ingest.md  logic-rules.md  models.md
docs/guide/: cli-repl.md  core-concepts.md  distributed.md  explainability-hitl.md  getting-started.md  limits.md  logic-packs-hub.md  model-optimization.md  rust-sdk.md  security.md  storage-lance.md  what-is-anamdb.md
docs/public/registry/: index.json
playground/: app.js  index.html  style.css
proto/: anamdb.proto
sdks/python/: README.md  pyproject.toml
sdks/python/src/anamdb/: __init__.py  client.py  exceptions.py  models.py
sdks/python/tests/: test_client.py
