[package]
name = "anam-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Interactive CLI / REPL for AnamDB."
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "anam"
path = "src/main.rs"

[dependencies]
anamdb = { path = "../anamdb" }
tokio.workspace = true
clap.workspace = true
rustyline.workspace = true
comfy-table.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
datafusion.workspace = true
dirs-next = "2"
dotenvy = { workspace = true }
toml = "1"
