[package]
name = "anamdb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AnamDB — the AI-native, differentiable logic kernel for autonomous agents."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
cuda = ["cudarc"]

[dependencies]
# Async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# DataFusion (re-exports arrow)
datafusion.workspace = true
datafusion-expr.workspace = true
datafusion-physical-plan.workspace = true
datafusion-physical-expr.workspace = true
datafusion-common.workspace = true
datafusion-execution.workspace = true

# Storage
lance.workspace = true
object_store.workspace = true
url.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true

# Inference
ort.workspace = true

# GPU
cudarc = { workspace = true, optional = true }

# Serialization
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true

# HTTP
reqwest.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
bytes.workspace = true
rand.workspace = true
tokio-tungstenite = "0.29.0"
toml = "1.1.2"

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
tokio-test.workspace = true

[[bench]]
name = "reasoning"
harness = false
