[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anamdb"
version = "1.0.0"
description = "Python client for AnamDB — the AI-native neurosymbolic database engine."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Jorge Martinez" },
]
keywords = ["database", "ai", "neurosymbolic", "datalog", "arrow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.optional-dependencies]
arrow = ["pyarrow>=14.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://jorge-nexsys.github.io/anam"
Repository = "https://github.com/jorge-nexsys/anam"
Documentation = "https://jorge-nexsys.github.io/anam"
Issues = "https://github.com/jorge-nexsys/anam/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/anamdb"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
